Worked on docs and overall
