# backend/services/api-gateway/internal/dto/default_dto.go
@@ -1,0 +1,5 @@
+package dto
+
+type ErrorResponse struct {
+	ErrorCode int `json:"error"`
+}
